--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<h1 style="color:blue;text-align:center">Golf</h1>
-		<img src="/images/oldtime.jpg" alt="Gathering of golfers from the past" style="width:1100px;height:373px;">
+		<img src="images/oldtime.jpg" alt="Gathering of golfers from the past" style="width:1100px;height:373px;">
 		<hr>
 		<h2>Why play golf?</h2>
 		<p>You might be asking yourelf, why would I bother paying golf. It seems like it isn't 'really a sport' or 'only for the rich'. Well, I disagree with both those remarks. Golf is an enjoyable pass time that is challenging yet rewarding. It provides an opportunity to spend 2-5 hours outside, enjoying the sunshine and gorgeous views that golf courses tend to offer. On top of that it is a social activity, often centered around time with those you enjoy. This can be taken up a notch by placing friendly wagers on the round, so potentially making a couple bucks while enjoying a Saturday. Below is a link to Golf Digest, a well known name in golf that provides articles and reviews. <br> <br> <a href="https://www.golfdigest.com/" target="_blank"> Golf Digest </a> </p>
