--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Golf</title>
+		<title>Sincore Site</title>
 		<meta charset="UTF-8">
 		<meta name="description" content="This is a website about Golf">
 		<meta name="keywords" content="Golf, Callaway, Clubs, Golf Cart, Tee">
