--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 		</ol>
 		<p>Some common rules of the course that are good to know. When you find yourself in a sandtrap, some might say you are "at the beach". Typically cannot drive the golf cart on the grass on par 3s or within 20 feet of the greens. Keep the pace of play around a 4ish hour round of golf (18 holes). <span class="boldtext italictext">Keep pace of play up with the group in front of you too.</span> </p>	
 		<img src="images/sandtrap.jpg" alt="At the beach" style="width:420px;height:280px;">
+		<a href="secondpage.html">Go to Second Page</a>
 	</body>
 </html>
 
