--- a/college.html
+++ b/college.html
@@ -18,12 +18,17 @@
 			<li class= "menu"><a href="about.html">About</a></li>
 			<li class= "menu right"><a href="contact.html">Contact</a></li>
 		</ul>
-		<ul class="submenu">
-			<li class="submenu dropdown"><a href="web_fundamentals/SincoreEricHomePage.html" target="_blank">Web Fundamentals</a></li>
+		<ul class="submenu">		
 			<li class="submenu"><a href="college.html">Python Intro</a></li>
 			<li class= "submenu"><a href="college.html">Networking Fundamentals</a></li>
 			<li class= "submenu"><a href="college.html">Software Development</a></li>
-		</ul>
-		
+			<li class="dropdown submenu">
+				<a href="college.html" class="dropbtn">Web Fundamentals</a>
+				<div class="dropdown-content">
+					<a href="web_fundamentals/golf/SincoreEricHomePage.html" target="_blank">Golf</a><br>
+					<a href="web_fundamentals/final/SincoreEricHomePage.html" target="_blank">Final Project</a>
+				</div>
+			</li>
+		</ul>		
 	</body>
 </html>
