--- a/college.html
+++ b/college.html
@@ -26,7 +26,7 @@
 				<a href="college.html" class="dropbtn">Web Fundamentals</a>
 				<div class="dropdown-content">
 					<a href="/web_fundamentals/golf/SincoreEricHomePage.html" target="_blank">Golf</a><br>
-					<a href="/web_fundamentals/final/SincoreEricHomePage.html" target="_blank">Final Project</a>
+					<a href="https://github.com/ericsincore/webclass/blob/5d2d2071cdbe223a68913d5233b6ad574862288f/web_fundamentals/final/SincoreEricHomePage.html" target="_blank">Final Project</a>
 				</div>
 			</li>
 		</ul>		
