--- a/college.html
+++ b/college.html
@@ -25,7 +25,7 @@
 			<li class="dropdown submenu">
 				<a href="college.html" class="dropbtn">Web Fundamentals</a>
 				<div class="dropdown-content">
-					<a href="/web_fundamentals/golf/SincoreEricHomePage.html" target="_blank">Golf</a><br>
+					<a href="https://github.com/ericsincore/webclass/blob/04ef8814a5e0a17e4d9f0e8305d534c479a2a05b/web_fundamentals/golf/SincoreEricHomePage.html" target="_blank">Golf</a><br>
 					<a href="https://github.com/ericsincore/webclass/blob/5d2d2071cdbe223a68913d5233b6ad574862288f/web_fundamentals/final/SincoreEricHomePage.html" target="_blank">Final Project</a>
 				</div>
 			</li>
