--- a/web_fundamentals/golf/SincoreEricHomePage.html
+++ b/web_fundamentals/golf/SincoreEricHomePage.html
@@ -25,7 +25,7 @@
 		</audio>
 		<hr>
 		
-		<img src="images/oldtime.jpg" alt="Gathering of golfers from the past" style="width:1100px;height:373px;" class="center">
+		<img src="/golf/images/oldtime.jpg" alt="Gathering of golfers from the past" style="width:1100px;height:373px;" class="center">
 		
 		<h2>Website Overview</h2>
 		<video width="320" height="240" controls>
