--- a/college.html
+++ b/college.html
@@ -25,8 +25,8 @@
 			<li class="dropdown submenu">
 				<a href="college.html" class="dropbtn">Web Fundamentals</a>
 				<div class="dropdown-content">
-					<a href="https://github.com/ericsincore/webclass/blob/04ef8814a5e0a17e4d9f0e8305d534c479a2a05b/web_fundamentals/golf/SincoreEricHomePage.html" target="_blank">Golf</a><br>
-					<a href="final/SincoreEricHomePage.html" target="_blank">Final Project</a>
+					<a href="golf/SincoreEricHomePage.html" target="_blank">Golf</a><br>
+					<a href="final/SincoreEricHomePage1.html" target="_blank">Final Project</a>
 				</div>
 			</li>
 		</ul>		
