--- a/final/SincoreEricHomePage1.html
+++ b/final/SincoreEricHomePage1.html
@@ -7,7 +7,7 @@
 		<meta name="keywords" content="Career, IT, Web Development, Website, Digital Design">
 		<meta name="author" content="Eric Sincore">
 		<meta name="viewport" content="width=devide-width, intial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="SincoreEricStylesheet.css">
+		<link rel="stylesheet" type="text/css" href="SincoreEricStylesheet1.css">
 	</head>
 	<body>
 		<img src="images1/web_development.jpg" alt="See though screen of web development" style="width:100%;height:173px;" class="center">
