--- a/golf/SincoreEricHomePage.html
+++ b/golf/SincoreEricHomePage.html
@@ -25,7 +25,7 @@
 		</audio>
 		<hr>
 		
-		<img src="images/oldtime.jpg" alt="Gathering of golfers from the past" style="width:1100px;height:373px;" class="center">
+		<img src="golf/images/oldtime.jpg" alt="Gathering of golfers from the past" style="width:1100px;height:373px;" class="center">
 		
 		<h2>Website Overview</h2>
 		<video width="320" height="240" controls>
@@ -36,7 +36,7 @@
 		<h2>Why play golf?</h2>
 		<p>You might be asking yourelf, why would I bother paying golf. It seems like it isn't 'really a sport' or 'only for the rich'. Well, I disagree with both those remarks. Golf is an enjoyable pass time that is <span class="italictext">challenging yet rewarding.</span> It provides an opportunity to spend 2-5 hours outside, enjoying the sunshine and gorgeous views that golf courses tend to offer. On top of that it is a social activity, often centered around time with those you enjoy. This can be taken up a notch by placing friendly wagers on the round, so potentially making a couple bucks while enjoying a Saturday. Below is a link to Golf Digest, a well known name in golf that provides articles and reviews. <br> <br> <a href="https://www.golfdigest.com/" target="_blank"> Golf Digest </a> </p>
 		<a href="https://www.golfdigest.com/" target="_blank">
-			<img src="images/naturepic.jpg" alt="Nature on the course" style="width:297px;height:220px;" class="center">
+			<img src="golf/images/naturepic.jpg" alt="Nature on the course" style="width:297px;height:220px;" class="center">
 		</a>
 		<hr>
 		<h2>What equipment is needed to play?</h2>
@@ -77,7 +77,7 @@
 			<li>Double Boggie - <span class="italictext">two over par.</span></li>
 		</ol>
 		<p>Some common rules of the course that are good to know. When you find yourself in a sandtrap, some might say you are "at the beach". Typically cannot drive the golf cart on the grass on par 3s or within 20 feet of the greens. Keep the pace of play around a 4ish hour round of golf (18 holes). <span class="boldtext italictext">Keep pace of play up with the group in front of you too.</span> </p>	
-		<img src="images/sandtrap.jpg" alt="At the beach" style="width:420px;height:280px;" class="center">
+		<img src="golf/images/sandtrap.jpg" alt="At the beach" style="width:420px;height:280px;" class="center">
 		<hr>
 		
 		<button type="button" class="center"
