--- a/college.html
+++ b/college.html
@@ -27,6 +27,7 @@
 				<div class="dropdown-content">
 					<a href="golf/SincoreEricHomePage.html" target="_blank">Golf</a><br>
 					<a href="final/SincoreEricHomePage1.html" target="_blank">Final Project</a>
+					<a href="Web Dev 2/SincoreEricAssignment8.html" target="_blank>Web Dev 2</a>
 				</div>
 			</li>
 		</ul>		
