--- a/college.html
+++ b/college.html
@@ -26,7 +26,7 @@
 				<a href="college.html" class="dropbtn">Web Fundamentals</a>
 				<div class="dropdown-content">
 					<a href="golf/SincoreEricHomePage.html" target="_blank">Golf</a><br>
-					<a href="final/SincoreEricHomePage1.html" target="_blank">Final Project</a>
+					<a href="final/SincoreEricHomePage1.html" target="_blank">Final Project</a><br>
 					<a href="Web Dev 2/SincoreEricAssignment8.html" target="_blank>Web Dev 2</a>
 				</div>
 			</li>
