--- a/index.html
+++ b/index.html
@@ -1,22 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Sincore's Site</title>
-		<meta charset="UTF-8">
-		<meta name="description" content="This is a website for Sincores from Sincores">
-		<meta name="keywords" content="IT, Classes, College, Recipees, Golf, Videos, Jokes">
-		<meta name="author" content="Eric Sincore">
-		<meta name="viewport" content="width=devide-width, intial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="index.css">
-	</head>
-	<body>
-		<h1 class="header">Sincore's Site</h1>
-		<ul class="menu">
-			<li class="menu active"><a href="index.html">Home</a></li>
-			<li class="menu"><a href="recipees.html">Recipees</a></li>
-			<li class= "menu"><a href="college.html">Class Projects</a></li>
-			<li class= "menu"><a href="about.html">About</a></li>
-			<li class= "menu right"><a href="contact.html">Contact</a></li>
-		</ul>
-	</body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="This is a website for Sincores from Sincores">
+  <meta name="keywords" content="Recipees, Movies, TV Shows">
+  <meta name="author" content="Eric">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Eric's Kitchen & Cinema</title>
+  <link rel="stylesheet" href="index.css">
+</head>
+<body>
+  <header>
+    <h1>Sincore's Site</h1>
+    <p>Recipees & Movies</p>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="recipes.html">Recipes</a></li>
+      <li><a href="movies.html">Movie Reviews</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section class="intro">
+      <h2>Welcome!</h2>
+      <p>This is your go-to spot for delicious recipes and honest movie reviews. Dive in and share your thoughts!</p>
+    </section>
+
+    <section class="features">
+      <div class="feature-box">
+        <h3>🍽️ Explore Recipes</h3>
+        <p>Browse Eric’s favorite dishes, from breakfast to dessert. Got a twist? Suggest it!</p>
+        <a href="recipes.html" class="btn">View Recipes</a>
+      </div>
+
+      <div class="feature-box">
+        <h3>🎬 Movie Reviews</h3>
+        <p>Read reviews, rate films, and suggest what Eric should watch next.</p>
+        <a href="movies.html" class="btn">Read Reviews</a>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Sincore's Site</p>
+  </footer>
+</body>
 </html>
