--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="This is a website for Sincores from Sincores">
-  <meta name="keywords" content="Recipees, Movies, TV Shows">
+  <meta name="keywords" content="Recipes, Movies, TV Shows">
   <meta name="author" content="Eric">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Eric's Kitchen & Cinema</title>
-  <link rel="stylesheet" href="index.css">
+  <title>Sincore's Site</title>
+  <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
   <header>
     <h1>Sincore's Site</h1>
-    <p>Recipees & Movies</p>
+    <p>Recipes & Movies</p>
   </header>
 
   <nav>
@@ -48,3 +48,4 @@
   </footer>
 </body>
 </html>
+
