--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
     </ul>
   </nav>
 
-  <main>
+ <main>
     <section class="intro">
       <h2>Welcome!</h2>
-      <p>This is your go-to spot for delicious recipes and honest movie reviews. Dive in and share your thoughts!</p>
+      <p>A consolidation of decent recipes and decent movie reviews.</p>
     </section>
 
     <section class="features">
       <div class="feature-box">
         <h3>🍽️ Explore Recipes</h3>
-        <p>Browse Eric’s favorite dishes, from breakfast to dessert. Got a twist? Suggest it!</p>
+        <p>Browse some favorites, if you like it leave a review. Got your own, get it added in!</p>
         <a href="recipes.html" class="btn">View Recipes</a>
       </div>
 
       <div class="feature-box">
         <h3>🎬 Movie Reviews</h3>
-        <p>Read reviews, rate films, and suggest what Eric should watch next.</p>
+        <p>Reviews, ratings, and recommendations from those you can trust.</p>
         <a href="movies.html" class="btn">Read Reviews</a>
       </div>
     </section>
@@ -48,5 +48,4 @@
   </footer>
 </body>
 </html>
-
 
