--- a/recipees.html
+++ b/recipees.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Sincore's Site</title>
-		<meta charset="UTF-8">
-		<meta name="description" content="This is a website for Sincores from Sincores">
-		<meta name="keywords" content="IT, Classes, College, Recipees, Golf, Videos, Jokes">
-		<meta name="author" content="Eric Sincore">
-		<meta name="viewport" content="width=devide-width, intial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="index.css">
-	</head>
-	<body>
-		<h1 class="header">Sincore's Site</h1>
-		<ul class="menu">
-			<li class="menu active"><a href="index.html">Home</a></li>
-			<li class="menu"><a href="recipees.html">Recipees</a></li>
-			<li class= "menu"><a href="college.html">Class Projects</a></li>
-			<li class= "menu"><a href="about.html">About</a></li>
-			<li class= "menu right"><a href="contact.html">Contact</a></li>
-		</ul>
-	</body>
+<head>
+  <title>Sincore's Site</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="This is a website for Sincores from Sincores">
+  <meta name="keywords" content="Recipes, Movies, TV Shows">
+  <meta name="author" content="Eric">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="stylesheet" type="text/css" href="movies.css">
+</head>
+<body>
+  <header>
+    <h1>Sincore's Site</h1>
+    <p>A place for movies and food.</p>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="recipes.html">Recipes</a></li>
+      <li><a href="movies.html">Movie Reviews</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section class="intro">
+      <h2>Recipes</h2>
+      <p>Check out what we've been eating</p>
+    </section>
+	
+	<section>
+		<h1>UNDER CONSTRUCTION</h1>
+	</section>
+
+  </main>
+
+  <footer>
+    <p>© 2025 Sincore's Site</p>
+  </footer>
+
+</body>
 </html>
