--- a/movies.html
+++ b/movies.html
@@ -48,7 +48,7 @@
 
     <section class="comments">
       <h2>Join the Discussion</h2>
-		<form id="comment-form" action="https://formspree.io/f/YOUR_ENDPOINT" method="POST" novalidate>
+		<form id="comment-form" action="https://formspree.io/f/xblzlgyn" method="POST" novalidate>
 		  <label for="name">Name</label>
 		  <input id="name" name="name" type="text" required>
 
@@ -77,3 +77,4 @@
   <script src="comment-form.js"></script>
 </body>
 </html>
+
